+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changes in Achievo 1.4
----------------------
* Now we use the recipients language, when sending timeguard reminder email 
  to an employee. [Yury]

Changes in Achievo 1.3.1
------------------------
* Fixed SQL Error and interface problems in hours approval functionallity.
  [Guido]

Changes in Achievo 1.3.0
------------------------
* Fixed problem where adding multiple time registraions using a period of
  time didn't work because the weekday filter selection was hidden. [Guido]
* Fixed install files of timereg and employees. [Yury]
* Fixed Error on 'approve week' page. (bug #936) [Yury]

Changes in Achievo 1.3RC2
-------------------------
+ Added projects category field project and projects category filter
  tohoursurvey. [Yury]
+ Added master/subproject support for project and hoursurvey. [Yury]
+ Added missing dirs for docmanager module. [Sandy]
+ Added missing documents tab for quotations. [Sandy]
+ Added executeSQL function to setup module, this makes it possible
  to execute SQL queries for creating tables etc. This makes it
  possible to use the atkMetaNode. [Sandy]
+ Active and archived contracts are now on seperate subtabs when viewing/editing an
  organisation [Dennis]
+ Added import link for contacts. [Sandy]
* Fixed ATK Bug with strange chars in the AJAX dropdowns. [Yury]
* Fixed bug with obligatory fields in person table. [Sandy]
* Removed some menu items when a user doens't have the rights
  for it. [Sandy]
* Removed contacts search from scheduler if the user doesn't
  have the rights for it. [Sandy]
* Fixed default userview database field size. [Sandy]
* Fixed password restrictions in the userpreferences. [Sandy]
* Fixed in the todo history, project id isn't obligatry. [Sandy]
* Fixed the Phase Template functionallty. (bug #885) [Sandy]